--- a/roadpin-frontend/app/index.jade
+++ b/roadpin-frontend/app/index.jade
@@ -1,5 +1,5 @@
 !!! 5
-html(lang='en', ng-app="roadpinFrontendApp")
+html(lang='en', ng-app="roadpinFrontendApp", ng-controller='AppCtrl')
   head
     meta(charset='utf-8')
     meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
@@ -18,7 +18,7 @@ html(lang='en', ng-app="roadpinFrontendApp")
       window.brunch['auto-reload'] = {
         enabled: true
       };
-  body(ng-controller='AppCtrl')
+  body
     .wrapper
       .navbar
         .navbar-inner
@@ -28,12 +28,11 @@ html(lang='en', ng-app="roadpinFrontendApp")
               span.icon-bar
               span.icon-bar
             .brand
-              a(href='/') Angular Brunch Seed
+              a(href='/') RoadPin
             .nav-collapse
               div(ng-include="'/views/nav.html'")
       .container.main-content
         div(ng-view)
-        div Angular Brunch seed app (directive): v<span app-version></span>
       .push
 
     footer.footer
