--- a/roadpin-frontend/app/styles/themes/custom/_overrides.scss
+++ b/roadpin-frontend/app/styles/themes/custom/_overrides.scss
@@ -18,3 +18,11 @@ body {
     border: 1px solid rgb(212,212,212);
     height: 300px;
 }
+
+.active {
+  color: $white
+}
+
+.brand a {
+  color: #00ffff
+}
