--- a/roadpin-frontend/app/index.jade
+++ b/roadpin-frontend/app/index.jade
@@ -7,8 +7,8 @@ html(lang='en', ng-app="roadpinFrontendApp", ng-controller='AppCtrl')
     meta(name='description', content='')
     meta(name='author', content='')
     title(ng-bind-template='{{pageTitle}}')
+    link(rel='stylesheet', href='/css/vendor.css')
     link(rel='stylesheet', href='/css/app.css')
-    //-script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js')
     //if lte IE 7
       script(src='http://cdnjs.cloudflare.com/ajax/libs/json2/20110223/json2.js')
     //if lte IE 8
@@ -41,14 +41,15 @@ html(lang='en', ng-app="roadpinFrontendApp", ng-controller='AppCtrl')
           small
             a(href='https://github.com/scotch/angular-brunch-seed') angular-brunch-seed | source
     script(src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js")
-    //script(src='http://code.angularjs.org/1.2.0-rc.2/angular.min.js')
-    //script(src='http://code.angularjs.org/1.2.0-rc.2/angular-animate.min.js')
-    //script(src='http://code.angularjs.org/1.2.0-rc.2/angular-cookies.min.js')
-    //script(src='http://code.angularjs.org/1.2.0-rc.2/angular-loader.min.js')
-    //script(src='http://code.angularjs.org/1.2.0-rc.2/angular-resource.min.js')
-    //script(src='http://code.angularjs.org/1.2.0-rc.2/angular-route.min.js')
-    //script(src='http://code.angularjs.org/1.2.0-rc.2/angular-sanitize.min.js')
-    //script(src='http://code.angularjs.org/1.2.0-rc.2/angular-touch.min.js')
+    script(src='http://code.angularjs.org/1.2.0-rc.2/angular.min.js')
+    script(src='http://code.angularjs.org/1.2.0-rc.2/angular-cookies.min.js')
+    script(src='http://code.angularjs.org/1.2.0-rc.2/angular-loader.min.js')
+    script(src='http://code.angularjs.org/1.2.0-rc.2/angular-resource.min.js')
+    script(src='http://code.angularjs.org/1.2.0-rc.2/angular-route.min.js')
+    script(src='http://code.angularjs.org/1.2.0-rc.2/angular-sanitize.min.js')
+    script(src='http://code.angularjs.org/1.2.0-rc.2/angular-animate.min.js')
+    script(src='http://code.angularjs.org/1.2.0-rc.2/angular-touch.min.js')
     script(src="http://bestiejs.github.io/json3/lib/json3.js")
+    script(src="http://cdnjs.cloudflare.com/ajax/libs/ng-grid/2.0.7/ng-grid.min.js")
     script(src="/js/vendor.js")
     script(src='/js/app.js')
