--- a/roadpin-frontend/app/views/nav.jade
+++ b/roadpin-frontend/app/views/nav.jade
@@ -5,3 +5,5 @@ ul.nav
     a(ng-href='#/view2') view2
   li(ng-class="getClass('/view3')")
     a(ng-href='#/view3') 今天的情形
+  li(ng-class="getClass('/view4')")
+    a(ng-href='#/view4') 今天的情形 (Google Map)
