--- a/roadpin-frontend/app/views/partial4.jade
+++ b/roadpin-frontend/app/views/partial4.jade
@@ -1,2 +1,2 @@
 div(ng-controller="MapCtrl")
-  div.map-canvas(ui-map="myMap", ui-options="mapOptions")
+  div.map-canvas(ui-map="myMap", ui-options="mapOptions", ui-event="{'map-idle' : 'onMapIdle()'}")
