--- a/roadpin-frontend/app/index.jade
+++ b/roadpin-frontend/app/index.jade
@@ -9,6 +9,7 @@ html(lang='en', ng-controller='AppCtrl')
     title(ng-bind-template='{{pageTitle}}')
     link(rel='stylesheet', href='/css/vendor.css')
     link(rel='stylesheet', href='/css/app.css')
+    link(rel='stylesheet', href='http://cdnjs.cloudflare.com/ajax/libs/ng-grid/2.0.7/ng-grid.min.css')
     //if lte IE 7
       script(src='http://cdnjs.cloudflare.com/ajax/libs/json2/20110223/json2.js')
     //if lte IE 8
