--- a/roadpin-frontend/app/views/partial5.jade
+++ b/roadpin-frontend/app/views/partial5.jade
@@ -7,3 +7,4 @@ div(ng-controller='ReportCtrl')
   p roll: {{geoAccelGyro.roll}}
   p move_x: {{geoAccelGyro.move_x}}
   p move_y: {{geoAccelGyro.move_y}}
+  p move_z: {{geoAccelGyro.move_z}}
